# iaac-tc-quic

./: .gitignore  .gitmodules  README.md  Vagrantfile
ansible/: playbook.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/router/tasks/: main.yml
tc-daemon/: client.py  pyproject.toml  requirements.txt  router.py  server.crt  server.key  start.sh  venv.sh
