[tool.poetry]
name = "tc-daemon"
version = "0.1.0"
description = ""
authors = ["Andrea Garbugli <andrea.garbugli@outlook.it>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
pyroute2 = "^0.7.3"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
